# AlphaOptions

./: .env.example  .gitignore  README.md  biome.json  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  tsconfig.json
src/: index.ts
src/agent/: config.ts  contract-selector.ts  index.ts  trading-agent.ts
src/alpaca/: client.test.ts  client.ts  config.test.ts  config.ts  index.ts  options-data.test.ts  options-data.ts
src/alphaoptions/: __init__.py  broker.py  models.py  risk.py  strategies.py
src/cli/: index.ts
src/cli/commands/: agent.ts  analyze.ts  list.ts  research.ts  status.ts
src/strategies/: analyzer-extended.test.ts  analyzer.test.ts  analyzer.ts  definitions.test.ts  definitions.ts  index.ts
src/types/: index.ts  options.ts  schemas.test.ts  strategies.ts
tests/: __init__.py  conftest.py  test_broker.py  test_broker_extended.py  test_models.py  test_models_extended.py  test_risk.py  test_risk_extended.py  test_strategies.py  test_strategies_extended.py
